# financeiro

./: docker-compose.yml  pyproject.toml
.claude/: settings.local.json
app/: main.py
app/api/: exception_handlers.py  scalar.py
app/api/v1/: dependencies.py
app/api/v1/routers/: category_router.py  transaction_router.py  user_router.py
app/api/v1/schemas/: user_schema.py
app/application/dto/: category_dto.py  transaction_dto.py  user_dto.py
app/application/use_cases/category/: create_category.py  delete_category.py  get_all_categories.py  get_category.py  update_category.py
app/application/use_cases/transaction/: get_transaction.py  (+4 more)
app/domain/entities/: categories.py  category.py  transaction.py  user.py
app/domain/enums/: e_transaction.py
app/domain/repositories/: category_repository.py  transaction_repository.py  user_repository.py
app/domain/value_objects/: amount.py  name.py  password.py  transaction_type.py
app/infra/: session.py
app/infra/config/: settings.py
app/infra/model/: __init__.py  category_model.py  transaction_model.py  user_model.py  user_models.py
app/infra/repositories/: category_repository.py  transaction_repository.py  user_repository.py
ddd_example/src/: container.py
ddd_example/src/interfaces/: main.py
migrations/: env.py
migrations/versions/: 0ef150f2c5db_create_users_table.py  75ea6e1f2467_added_category_end_transation_table.py  cb7c422c6109_fix_category_id_autoincrement.py
tests/: conftest.py
tests/factories/: category.py  transaction.py  user.py
tests/integration/repositories/: user_repository_test.py
(+25 files in other folders)
